deployment/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fakenews-api
  namespace: fakenews
spec:
  selector:
    app: fakenews-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
